--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -1,4 +1,5 @@
 .hero {
+    position: relative;
     width: 100%;
     display: grid;
     place-items: center;
@@ -6,10 +7,7 @@
     grid-gap: 48px;
     height: calc(100vh - 160px);
     background-color: #408bb3;
-    background-image: url('/logo.png');
-    background-position: 110% 18vw;
-    background-size: 50vw;
-    background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .hero div {
@@ -21,7 +19,7 @@
 
 .hero h1 {
     color: #FFF;
-    font-size: 80px;
+    font-size: 48px;
     line-height: 1;
     text-transform: uppercase;
     margin-bottom: 24px;
@@ -29,13 +27,13 @@
 
 .hero h4 {
     color: #FFF;
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .button {
-    font-size: 18px;
-    padding-block: 12px;
-    padding-inline: 32px;
+    font-size: 16px;
+    padding-block: 8px;
+    padding-inline: 24px;
     border-radius: 10px;
     background-color: #84c3e6;
     color: #19232a;
@@ -46,4 +44,36 @@
 .button:hover {
     color: #FFF;
     background-color: #365b76;
+}
+
+.background_logo {
+    position: absolute;
+    min-width: 400px;
+    width: 50vw;
+    right: -10%;
+    bottom: -10%;
+    z-index: 0;
+}
+
+@media screen and (min-width: 650px) {
+    .button {
+        font-size: 18px;
+        padding-block: 12px;
+        padding-inline: 32px;
+        border-radius: 10px;
+    }
+
+    
+    .hero h1 {
+        color: #FFF;
+        font-size: 80px;
+        line-height: 1;
+        text-transform: uppercase;
+        margin-bottom: 24px;
+    }
+
+    .hero h4 {
+        color: #FFF;
+        font-size: 24px;
+    }
 }
